force-app/main/default/objects/WaitlistApplicant__c/WaitlistApplicant__c.object-meta.xml
<CustomObject>
    <description>This Object is a junction object beet ween Waitlist and Individual Application used track the status of Applicants in respected Waitlists.</description>
    <label>Listing Applicant</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>