force-app/main/default/objects/WaitlistApplicant__c/fields/Application_on_Hold__c.field-meta.xml
<CustomField>
    <fullName>Application_on_Hold__c</fullName>
    <label>Application on Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>