force-app/main/default/objects/WaitlistApplicant__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <formula>IF(
    TEXT(Individual_Application__r.Status) = &quot;Closed&quot;,
    TEXT(Individual_Application__r.Sub_Status__c),
    TEXT(Individual_Application__r.Status)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Status</label>
    <type>Text</type>
</CustomField>