force-app/main/default/objects/WaitlistApplicant__c/fields/Applied_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Applied_Bedrooms__c</fullName>
    <label>Applied Bedrooms</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>