force-app/main/default/objects/WaitlistApplicant__c/fields/Applied_Order__c.field-meta.xml
<CustomField>
    <fullName>Applied_Order__c</fullName>
    <label>Applied Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>