force-app/main/default/objects/WaitlistApplicant__c/fields/Applied_Preference__c.field-meta.xml
<CustomField>
    <fullName>Applied_Preference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applied Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>