force-app/main/default/objects/WaitlistApplicant__c/fields/Applied_Set_Aside__c.field-meta.xml
<CustomField>
    <fullName>Applied_Set_Aside__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applied Set Aside</label>
    <length>255</length>
    <type>Text</type>
</CustomField>