force-app/main/default/objects/WaitlistApplicant__c/fields/Applied_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Applied_Unit_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applied Unit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>