force-app/main/default/objects/WaitlistApplicant__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HCR Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>