force-app/main/default/objects/WaitlistApplicant__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <formula>Individual_Application__r.Confirmation_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmation Number</label>
    <type>Text</type>
</CustomField>