force-app/main/default/objects/WaitlistApplicant__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision</label>
    <type>Checkbox</type>
</CustomField>