force-app/main/default/objects/WaitlistApplicant__c/fields/Decision_Score__c.field-meta.xml
<CustomField>
    <fullName>Decision_Score__c</fullName>
    <label>Decision Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>