force-app/main/default/objects/WaitlistApplicant__c/fields/Disability__c.field-meta.xml
<CustomField>
    <fullName>Disability__c</fullName>
    <formula>Individual_Application__r.Mobility_Group__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disability</label>
    <type>Checkbox</type>
</CustomField>