force-app/main/default/objects/WaitlistApplicant__c/fields/Eligible_Units__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Units__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligible Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>