force-app/main/default/objects/WaitlistApplicant__c/fields/Hold_Since__c.field-meta.xml
<CustomField>
    <fullName>Hold_Since__c</fullName>
    <formula>TODAY() -  Hold_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hold Since</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>