force-app/main/default/objects/WaitlistApplicant__c/fields/Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application__c</fullName>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipName>WaitlistApplicants</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>