force-app/main/default/objects/WaitlistApplicant__c/fields/Individual_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application_Status__c</fullName>
    <label>Applicant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Payment Requested</fullName>
            </value>
            <value>
                <fullName>Documents Submitted</fullName>
            </value>
            <value>
                <fullName>Ready to be offered unit</fullName>
            </value>
            <value>
                <fullName>Unit Offered</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Moved In</fullName>
            </value>
            <value>
                <fullName>Prioritization of applicant requested</fullName>
            </value>
            <value>
                <fullName>Unit Accepted</fullName>
            </value>
            <value>
                <fullName>Unit Rejected</fullName>
            </value>
            <value>
                <fullName>Pending - Unit Rejected</fullName>
            </value>
            <value>
                <fullName>Offer unit for viewing</fullName>
            </value>
            <value>
                <fullName>Submitted to DHCR for Approval</fullName>
            </value>
            <value>
                <fullName>Move Request Submitted</fullName>
            </value>
            <value>
                <fullName>Succession Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Appeal Filed</fullName>
            </value>
            <value>
                <fullName>Payment Paid</fullName>
            </value>
            <value>
                <fullName>Succession Eligible</fullName>
            </value>
            <value>
                <fullName>Inactive - Application Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>