force-app/main/default/objects/WaitlistApplicant__c/fields/Is_Mitchell_Lama__c.field-meta.xml
<CustomField>
    <fullName>Is_Mitchell_Lama__c</fullName>
    <formula>Individual_Application__r.Is_Mitchell_Lama__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Mitchell Lama</label>
    <type>Checkbox</type>
</CustomField>