force-app/main/default/objects/WaitlistApplicant__c/fields/Managing_Agent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Managing_Agent_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Managing Agent Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>