force-app/main/default/objects/WaitlistApplicant__c/fields/Managing_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Managing_Agent_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Managing Agent Email</label>
    <type>Email</type>
</CustomField>