force-app/main/default/objects/WaitlistApplicant__c/fields/Move_Decision_Made__c.field-meta.xml
<CustomField>
    <fullName>Move_Decision_Made__c</fullName>
    <label>Move Decision Made?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Move Request Rejected</fullName>
            </value>
            <value>
                <fullName>Move Request Approved</fullName>
            </value>
            <value>
                <fullName>Move Request Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>