force-app/main/default/objects/WaitlistApplicant__c/fields/No_of_Times_Unit_Rejected__c.field-meta.xml
<CustomField>
    <fullName>No_of_Times_Unit_Rejected__c</fullName>
    <label>No. of Times Unit Rejected</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>