force-app/main/default/objects/WaitlistApplicant__c/fields/Other_Prioritization_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Prioritization_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Prioritization Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>