force-app/main/default/objects/WaitlistApplicant__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>TEXT(Individual_Application__r.Payment_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>