force-app/main/default/objects/WaitlistApplicant__c/fields/Portal_Status__c.field-meta.xml
<CustomField>
    <fullName>Portal_Status__c</fullName>
    <formula>IF((ISPICKVAL(Individual_Application_Status__c, &quot;Ready to be offered unit&quot;)) , &apos;Documents Submitted&apos;,TEXT(Individual_Application_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>