force-app/main/default/objects/WaitlistApplicant__c/fields/Preference__c.field-meta.xml
<CustomField>
    <fullName>Preference__c</fullName>
    <label>Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>