force-app/main/default/objects/WaitlistApplicant__c/fields/Preference_Name_Prior_to_Move__c.field-meta.xml
<CustomField>
    <fullName>Preference_Name_Prior_to_Move__c</fullName>
    <label>Preference Name Prior to Move</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Studio</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>1BR</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2BR</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3BR</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4BR</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5BR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>