force-app/main/default/objects/WaitlistApplicant__c/fields/Preference_Prioritization_Request__c.field-meta.xml
<CustomField>
    <fullName>Preference_Prioritization_Request__c</fullName>
    <label>Preference Prioritization Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>