force-app/main/default/objects/WaitlistApplicant__c/fields/Preference_WAIVER_Requested__c.field-meta.xml
<CustomField>
    <fullName>Preference_WAIVER_Requested__c</fullName>
    <label>Preference WAIVER Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>