force-app/main/default/objects/WaitlistApplicant__c/fields/Preferencr_Prioritization_Request__c.field-meta.xml
<CustomField>
    <fullName>Preferencr_Prioritization_Request__c</fullName>
    <formula>IF( INCLUDES(Prioritization_Reason__c, &quot;Medical reasons&quot;) || INCLUDES(Prioritization_Reason__c, &quot;Apartment Uninhabitable Circumstances&quot;) || INCLUDES(Prioritization_Reason__c, &quot;Plumbing issues&quot;) ||INCLUDES(Prioritization_Reason__c, &quot;Other&quot;), &quot;Emergency&quot;, 
IF( INCLUDES(Prioritization_Reason__c, &quot;Veteran&quot;) || INCLUDES(Prioritization_Reason__c, &quot;Senior&quot;) || INCLUDES(Prioritization_Reason__c, &quot;Student&quot;) || INCLUDES(Prioritization_Reason__c, &quot;Set Aside Accesibility&quot;), &quot;Preference&quot;, &quot;Null&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferencr Prioritization Request formul</label>
    <type>Text</type>
</CustomField>