force-app/main/default/objects/WaitlistApplicant__c/fields/Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant__c</fullName>
    <formula>Individual_Application__r.Primary_Applicant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant</label>
    <type>Text</type>
</CustomField>