force-app/main/default/objects/WaitlistApplicant__c/fields/Prior_Status_to_Move__c.field-meta.xml
<CustomField>
    <fullName>Prior_Status_to_Move__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Status to Move</label>
    <length>255</length>
    <type>Text</type>
</CustomField>