force-app/main/default/objects/WaitlistApplicant__c/fields/Prioritization_Reason__c.field-meta.xml
<CustomField>
    <fullName>Prioritization_Reason__c</fullName>
    <label>Prioritization Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment Uninhabitable Circumstances</fullName>
            </value>
            <value>
                <fullName>Medical reasons</fullName>
            </value>
            <value>
                <fullName>Plumbing issues</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Set Aside Accesibility</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>