force-app/main/default/objects/WaitlistApplicant__c/fields/project__c.field-meta.xml
<CustomField>
    <fullName>project__c</fullName>
    <formula>Individual_Application__r.Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>project</label>
    <type>Text</type>
</CustomField>