force-app/main/default/objects/WaitlistApplicant__c/fields/Query_Order__c.field-meta.xml
<CustomField>
    <fullName>Query_Order__c</fullName>
    <formula>IF( AND(NOT(ISBLANK(Randomized_Order__c)),Randomized_Order__c&gt;0), Randomized_Order__c, Applied_Order__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Query Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>