force-app/main/default/objects/WaitlistApplicant__c/fields/Randomized_Order__c.field-meta.xml
<CustomField>
    <fullName>Randomized_Order__c</fullName>
    <label>Randomized Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>