force-app/main/default/objects/WaitlistApplicant__c/fields/Reinstate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reinstate_Reason__c</fullName>
    <label>Reinstate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal Approved</fullName>
            </value>
            <value>
                <fullName>No Appeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>