force-app/main/default/objects/WaitlistApplicant__c/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <inlineHelpText>The reason indicated by the O/MA that the unit was not offered to the applicant.</inlineHelpText>
    <label>Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rejection_Reasons</valueSetName>
    </valueSet>
</CustomField>