force-app/main/default/objects/WaitlistApplicant__c/fields/Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reasons__c</fullName>
    <label>Move Request Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Over/under occupancy</fullName>
            </value>
            <value>
                <fullName>Over income</fullName>
            </value>
            <value>
                <fullName>Selected out of order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>