force-app/main/default/objects/WaitlistApplicant__c/fields/Senior__c.field-meta.xml
<CustomField>
    <fullName>Senior__c</fullName>
    <formula>Individual_Application__r.Household_has_a_Senior__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Senior</label>
    <type>Checkbox</type>
</CustomField>