force-app/main/default/objects/WaitlistApplicant__c/fields/SetAside__c.field-meta.xml
<CustomField>
    <fullName>SetAside__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Set-Aside</label>
    <length>40</length>
    <type>Text</type>
</CustomField>