force-app/main/default/objects/WaitlistApplicant__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Types</valueSetName>
    </valueSet>
</CustomField>