force-app/main/default/objects/WaitlistApplicant__c/fields/Veteran__c.field-meta.xml
<CustomField>
    <fullName>Veteran__c</fullName>
    <formula>Individual_Application__r.Household_has_a_Veteran__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Veteran</label>
    <type>Checkbox</type>
</CustomField>