force-app/main/default/objects/WaitlistApplicant__c/fields/Veteran_Household__c.field-meta.xml
<CustomField>
    <fullName>Veteran_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veteran Household</label>
    <type>Checkbox</type>
</CustomField>