force-app/main/default/objects/WaitlistApplicant__c/fields/WA_External_Id__c.field-meta.xml
<CustomField>
    <fullName>WA_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>WA External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>