force-app/main/default/objects/WaitlistApplicant__c/fields/WA_Label_for_Lookup_on_Move_Action__c.field-meta.xml
<CustomField>
    <fullName>WA_Label_for_Lookup_on_Move_Action__c</fullName>
    <formula>Waitlist__r.Name &amp; &quot; | &quot; &amp; Waitlist__r.Project__r.Name &amp; &quot; | &quot; &amp; TEXT(Waitlist__r.Unit_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WA Label for Lookup on Move Action</label>
    <type>Text</type>
</CustomField>