force-app/main/default/objects/WaitlistApplicant__c/fields/Waiting_Since_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Since_In_Days__c</fullName>
    <formula>TODAY() -   DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waiting Since (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>