force-app/main/default/objects/WaitlistApplicant__c/fields/Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Waitlist__c</fullName>
    <label>Waitlist</label>
    <referenceTo>Waitlist__c</referenceTo>
    <relationshipName>WaitlistApplicants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>