force-app/main/default/objects/WaitlistApplicant__c/fields/Waitlist_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Reviewed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Waitlist Reviewed Date</label>
    <type>Date</type>
</CustomField>