force-app/main/default/objects/WaitlistApplicant__c/fields/Waitlist_Rules__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Rules__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Waitlist Rules</label>
    <referenceTo>Waitlist_Rules__c</referenceTo>
    <relationshipName>Waitlist_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>