force-app/main/default/objects/WaitlistApplicant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Individual_Application__c</columns>
    <columns>Waitlist__c</columns>
    <columns>project__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>