force-app/main/default/objects/WaitlistApplicant__c/listViews/Emergency_Prioritization_Requested.listView-meta.xml
<ListView>
    <fullName>Emergency_Prioritization_Requested</fullName>
    <columns>NAME</columns>
    <columns>Individual_Application__c</columns>
    <columns>Waitlist__c</columns>
    <columns>project__c</columns>
    <columns>Preference_Prioritization_Request__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Emergency_Prioritization_Request__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Emergency Prioritization Requested</label>
</ListView>