force-app/main/default/objects/WaitlistApplicant__c/listViews/Preference_Prioritization_Requested.listView-meta.xml
<ListView>
    <fullName>Preference_Prioritization_Requested</fullName>
    <columns>NAME</columns>
    <columns>Individual_Application__c</columns>
    <columns>Waitlist__c</columns>
    <columns>project__c</columns>
    <columns>Preference_Prioritization_Request__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Preference_Prioritization_Request__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <filters>
        <field>Preferencr_Prioritization_Request__c</field>
        <operation>equals</operation>
        <value>Preference</value>
    </filters>
    <filters>
        <field>Priority_Flag__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <label>Preference Prioritization Requested</label>
</ListView>